# rp2040-project-template

./: Cargo.toml  build.rs  link.x  memory.x
.cargo/: config  config.toml
src/: main.rs
