[package]
authors = ["the rp-rs team"]
edition = "2018"
readme = "README.md"
name = "rp2040-project-template"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"

defmt = { version="0.3.0" }
defmt-rtt = { version="0.3.1" }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
#defmt = { version="0.3.0" }
#defmt-rtt = { version="0.3.0" }
#panic-probe = { version = "0.3.0", features = ["print-defmt"] }

rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch="main" }
#rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", branch="multicore", features=["rt"] }
#rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", rev="fdc3f7bffe437352ab31500a67ab6dd8a0a76c5d", features=["rt"] }
#rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", rev="a07c3434ee061bbfc44f0464a49d9bdeae2187ad", features=["rt"] }
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", branch="main", features=["rt"] }
#rp2040-hal = { version="0.5.0" }
#alloc-cortex-m = "0.4.1"
#rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", branch="main", features=["rt", "alloc"] }
#critical-section = { version="0.2.5", features=["custom-impl"] }
#critical-section = { version="0.2.5", features=[] }
#static-alloc = { version="0.2.3", features=["polyfill"] }
#atomic-polyfill = "0.1.5"

#[patch.'https://github.com/rp-rs/rp-hal.git']
#rp2040-hal = { path ="../rp-hal/rp2040-hal" }

#[patch.crates-io]
#rp2040-hal = { path ="../rp-hal/rp2040-hal" }
#defmt = { version="0.3.0", path="/home/jan/embedded/defmt/defmt/" }
#defmt-rtt = { version="0.3.1", path="/home/jan/embedded/defmt/firmware/defmt-rtt/" }



# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
